# DevPilot

./: .gitignore  DevPilotInfo.plist  README.md
.agents/plugins/: marketplace.json
.github/workflows/: release.yml  windows.yml
DevPilot/: AppVersionInfo.swift  ContentView.swift  DevPilotApp.swift  SettingsView.swift  UpdateController.swift
DevPilot.xcodeproj/: project.pbxproj
DevPilot/Models/: PortUsage.swift
DevPilot/Services/: PortScanner.swift
DevPilot/Stores/: PortMonitorStore.swift
docs/superpowers/plans/: 2026-07-10-devpilot-website.md  2026-07-11-macos-project-relocation.md
docs/superpowers/specs/: 2026-07-10-devpilot-website-design.md  2026-07-11-macos-project-relocation-design.md
macos/DevPilot/: DevPilotApp.swift
macos/DevPilot/Services/: PortScanner.swift
script/: build_and_run.sh  package_dmg.sh  set_version.sh
web/: .gitignore  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
web/app/components/: BrandIcon.vue  FeatureCard.vue  ParticleField.client.vue  ProductConsole.vue  SiteFooter.vue  SiteHeader.vue
web/app/data/: site.ts
web/tests/: github-stats.test.ts  landing-motion.test.ts  production-contract.test.ts  site-content.test.ts
windows/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
windows/src/: core.ts  index.html  main.ts  styles.css
windows/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
windows/src-tauri/capabilities/: default.json
windows/src-tauri/src/: lib.rs  main.rs  model.rs  scanner.rs
windows/tests/: core.test.ts  fixture-listener.ts
(+6 files in other folders)
