[package]
name = "devpilot-windows"
version = "0.1.0"
description = "DevPilot port monitor for Windows"
authors = ["DevPilot contributors"]
edition = "2021"
rust-version = "1.88"
default-run = "DevPilot"

[lib]
name = "devpilot_windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "DevPilot"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
netstat2 = "0.11.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.38.4"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
